# frontend-monorepo

./: .dockerignore  .env  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .sentryclirc  CODEOWNERS  Dockerfile  Dockerfile.cra  Dockerfile.next  Jenkinsfile  LICENSE  Makefile  README.md  RELEASE.md  \  babel.config.json  cidv0.txt  cidv1.txt  commitlint.config-ci.js  commitlint.config-ci.mjs  docker-build.sh  entrypoint.sh  env-config.js  env.sh  ignore-netlify-build.js  jest.config.ts  jest.preset.js  make-release.js  makefile  migrations.json  netlify.toml  nx.json  package-lock.json  package.json  project.json  queries.graphql  rollup.config.js  setup-test.ts  (+4 more)
apps/console-test/: .env  .env.main  README.md  config.py  conftest.py  pyproject.toml
apps/console-test/.github/workflows/: playwright.yml
apps/console-test/fixtures/: market.py
apps/console-test/tests/deal_ticket/: test_basic_submit.py  test_deal_ticket_basics.py  test_stop_order_oco.py  test_trading_deal_ticket_submit_account.py
apps/console-test/tests/market/: test_closed_markets.py  test_market_info.py  test_markets_no_markets.py  test_monitoring_auction_price_volatility_market.py
apps/console-test/tests/market_lifecycle/: test_market_lifecycle.py
apps/console-test/tests/order/: test_order_status.py
apps/console-test/tests/orderbook/: test_orderbook.py
apps/console-test/tests/positions/: test_positions.py
apps/console-test/tests/settings/: test_settings.py
apps/console-test/tests/successor_market/: test_succession_line.py
apps/console-test/tests/trade_history/: test_trade_history.py
apps/console-test/tests/transfer/: test_transfer_key_to_key.py
apps/trading/e2e/: .env  .env.develop  .env.main  .env.next  README.md  config.py  conftest.py  pyproject.main.toml  pyproject.toml  wallet_config.py
apps/trading/e2e/.github/workflows/: playwright.yml
apps/trading/e2e/actions/: ticket.py  utils.py  vega.py
apps/trading/e2e/fixtures/: market.py
apps/trading/e2e/tests/activity_streak/: test_activity_streak.py
apps/trading/e2e/tests/assets/: test_assets.py
apps/trading/e2e/tests/chart_depth/: test_chart_depth.py
apps/trading/e2e/tests/deal_ticket/: test_basic.py  test_basic_submit.py  test_deal_ticket_basics.py  test_fees_margin_estimations.py  test_isolated_cross_margin.py  test_stop_isolated_cross_margin.py  test_stop_order.py  test_stop_order_oco.py  test_tp_sl.py  test_trading_deal_ticket_submit_account.py
apps/trading/e2e/tests/fees/: fees_test_ids.py  test_fees.py  test_fees_combo_tier_2.py  test_fees_referral_discount_tier_1.py  test_fees_referral_discount_tier_2.py  test_fees_volume_discount_tier_1.py  test_fees_volume_discount_tier_2.py
apps/trading/e2e/tests/get_started/: test_get_started.py
apps/trading/e2e/tests/iceberg_orders/: test_iceberg_orders.py
apps/trading/e2e/vegahome/: README.md  genesis.json  passphrase-file
(+7921 files in other folders)
